[mp3] use jna instead of jni