@@ -4,9 +4,11 @@
  * Programmed by Naohide Sano
  */
 
+import java.io.BufferedInputStream;
+import java.io.BufferedOutputStream;
 import java.io.OutputStream;
-import java.net.URL;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import javax.sound.sampled.AudioFileFormat;
@@ -14,20 +16,22 @@ import javax.sound.sampled.AudioFormat;
 import javax.sound.sampled.AudioInputStream;
 import javax.sound.sampled.AudioSystem;
 import javax.sound.sampled.DataLine;
-import javax.sound.sampled.FloatControl;
-import javax.sound.sampled.LineEvent;
 import javax.sound.sampled.SourceDataLine;
 
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.tritonus.sampled.convert.javalayer.MpegFormatConversionProvider;
 import org.tritonus.share.TDebug;
+import vavi.sound.SoundUtil;
+import vavi.util.Debug;
 import vavi.util.properties.annotation.Property;
 import vavi.util.properties.annotation.PropsEntity;
 import vavix.util.Checksum;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.tritonus.sampled.file.mpeg.MpegAudioFileWriter.MP3;
 
 
 /**
@@ -39,6 +43,10 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 @PropsEntity(url = "file://${user.dir}/local.properties")
 class Test3 {
 
+    static boolean localPropertiesExists() {
+        return Files.exists(Paths.get("local.properties"));
+    }
+
     static {
         System.setProperty("vavi.util.logging.VaviFormatter.extraClassMethod", "org\\.tritonus\\.share\\.TDebug#out");
 
@@ -47,16 +55,28 @@ class Test3 {
         TDebug.TraceAudioFileReader = false;
     }
 
+    static final double volume = Double.parseDouble(System.getProperty("vavi.test.volume",  "0.2"));
+
+    @Property
+    String wav = "src/test/resources/test.wav";
+
+    @Property
+    String mp3raw = "src/test/resources/test.mp3";
+
     @BeforeAll
-    static void setup() throws Exception {
+    static void setupAll() throws Exception {
         Files.createDirectories(Paths.get("tmp"));
     }
 
-    @Property
-    String inFile = "src/test/resources/test.mp3";
+    @BeforeEach
+    void setup() throws Exception {
+        if (localPropertiesExists()) {
+            PropsEntity.Util.bind(this);
+        }
+    }
 
     /**
-     * @param args
+     * @param args none
      */
     public static void main(String[] args) throws Exception {
         for (AudioFileFormat.Type type : AudioSystem.getAudioFileTypes()) {
@@ -70,7 +90,7 @@ class Test3 {
     @Test
     @DisplayName("decoding")
     void test2() throws Exception {
-        AudioInputStream originalAudioInputStream = AudioSystem.getAudioInputStream(Paths.get(inFile).toFile());
+        AudioInputStream originalAudioInputStream = AudioSystem.getAudioInputStream(Paths.get(mp3raw).toFile());
         AudioFormat originalAudioFormat = originalAudioInputStream.getFormat();
         System.err.println(originalAudioFormat);
         AudioFormat targetAudioFormat = new AudioFormat(
@@ -81,26 +101,16 @@ class Test3 {
                 4,
                 originalAudioFormat.getSampleRate(),
                 false);
-        System.err.println(targetAudioFormat);
+Debug.println(targetAudioFormat);
         AudioInputStream audioInputStream = AudioSystem.getAudioInputStream(targetAudioFormat, originalAudioInputStream);
         AudioFormat audioFormat = audioInputStream.getFormat();
         DataLine.Info info = new DataLine.Info(SourceDataLine.class, audioFormat, AudioSystem.NOT_SPECIFIED);
         SourceDataLine line = (SourceDataLine) AudioSystem.getLine(info);
-        line.addLineListener(event -> {
-            if (event.getType().equals(LineEvent.Type.START)) {
-                System.err.println("play");
-            }
-            if (event.getType().equals(LineEvent.Type.STOP)) {
-                System.err.println("done");
-            }
-        });
+        line.addLineListener(event -> Debug.println(event.getType()));
 
         byte[] buf = new byte[8192];
         line.open(audioFormat, buf.length);
-        FloatControl gainControl = (FloatControl) line.getControl(FloatControl.Type.MASTER_GAIN);
-        double gain = .02d; // number between 0 and 1 (loudest)
-        float dB = (float) (Math.log(gain) / Math.log(10.0) * 20.0);
-        gainControl.setValue(dB);
+        SoundUtil.volume(line, volume);
         line.start();
         int r;
         while (true) {
@@ -118,10 +128,9 @@ class Test3 {
     @Test
     @DisplayName("encoding")
     void test1() throws Exception {
-        URL url = Test3.class.getResource("/test.wav");
-        AudioInputStream ais = AudioSystem.getAudioInputStream(url);
+        AudioInputStream ais = AudioSystem.getAudioInputStream(new BufferedInputStream(Files.newInputStream(Path.of(wav))));
         AudioFormat inFormat = ais.getFormat();
-        System.err.println(inFormat);
+Debug.println(inFormat);
         AudioFormat outFormat = new AudioFormat(
                 MpegFormatConversionProvider.MPEG1L3,
                 -1f,
@@ -130,10 +139,11 @@ class Test3 {
                 -1,
                 -1f,
                 false);
-        System.err.println(outFormat);
+Debug.println(outFormat);
         AudioInputStream aout = AudioSystem.getAudioInputStream(outFormat, ais);
 
-        OutputStream fos = Files.newOutputStream(Paths.get("tmp", "out.mp3"), StandardOpenOption.CREATE, StandardOpenOption.WRITE);
+        Path out = Paths.get("tmp", "out.mp3");
+        OutputStream fos = Files.newOutputStream(out, StandardOpenOption.CREATE, StandardOpenOption.WRITE);
         byte[] buf = new byte[8192];
         while (true) {
             int r = aout.read(buf, 0, buf.length);
@@ -145,7 +155,43 @@ class Test3 {
         fos.close();
         aout.close();
 
-        assertEquals(Checksum.getChecksum(Paths.get("tmp", "out.mp3")), Checksum.getChecksum(Paths.get(inFile)));
+        assertEquals(Checksum.getChecksum(out), Checksum.getChecksum(Paths.get(mp3raw)));
+    }
+
+    @Test
+    @DisplayName("writer")
+    void test4() throws Exception {
+        AudioInputStream ais = AudioSystem.getAudioInputStream(new BufferedInputStream(Files.newInputStream(Path.of(wav))));
+        AudioFormat inFormat = ais.getFormat();
+Debug.println(inFormat);
+        AudioFormat outFormat = new AudioFormat(
+                MpegFormatConversionProvider.MPEG1L3,
+                inFormat.getSampleRate(),
+                -1,
+                inFormat.getChannels(),
+                -1,
+                -1f,
+                false);
+Debug.println(outFormat);
+        AudioInputStream aout = AudioSystem.getAudioInputStream(outFormat, ais);
+
+        Path out2 = Paths.get("tmp", "out2.mp3");
+        AudioSystem.write(aout, MP3, new BufferedOutputStream(Files.newOutputStream(out2)));
+
+        assertEquals(Checksum.getChecksum(out2), Checksum.getChecksum(Paths.get(mp3raw)));
+    }
+
+    @Test
+    @DisplayName("writer")
+    void test3() throws Exception {
+        AudioInputStream ais = AudioSystem.getAudioInputStream(new BufferedInputStream(Files.newInputStream(Path.of(mp3raw))));
+        AudioFormat inFormat = ais.getFormat();
+Debug.println(inFormat);
+
+        Path out2 = Paths.get("tmp", "out2.mp3");
+        AudioSystem.write(ais, MP3, new BufferedOutputStream(Files.newOutputStream(out2)));
+
+        assertEquals(Checksum.getChecksum(out2), Checksum.getChecksum(Paths.get(mp3raw)));
     }
 }
 
